crates/rstest-bdd/tests/ui_macros/datatable_duplicate.stderr
error: invalid step function signature: only one DataTable parameter is permitted

         = help: Remove one of the DataTable parameters.

 --> tests/ui_macros/datatable_duplicate.rs:6:60
  |
6 | fn step(#[datatable] first: Vec<Vec<String>>, #[datatable] second: Vec<Vec<String>>) {}
  |                                                            ^^^^^^
